--- a/buyer.html
+++ b/buyer.html
@@ -485,6 +485,118 @@ select option{background:#1a1d26;}
   border:1px solid rgba(255,64,129,0.2);
   margin-bottom:6px;
 }
+
+/* BILL STYLES */
+.bill-card{
+  background:#13161f;
+  border:1px solid rgba(255,64,129,0.15);
+  border-radius:14px;
+  margin-top:14px;
+  overflow:hidden;
+}
+.bill-header{
+  background:linear-gradient(135deg,#1a0a0f,#1e0e16);
+  padding:14px 16px;
+  border-bottom:1px solid rgba(255,64,129,0.1);
+}
+.bill-header-top{
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-start;
+  margin-bottom:8px;
+}
+.bill-shop{
+  font-family:'Playfair Display',serif;
+  font-size:15px;
+  font-weight:700;
+  color:#ffb3c6;
+}
+.bill-sub{
+  font-size:11px;
+  color:#666;
+  margin-top:2px;
+}
+.bill-order-no{
+  font-size:11px;
+  color:#888;
+  text-align:right;
+}
+.bill-order-no b{
+  display:block;
+  font-size:13px;
+  color:#ff4081;
+}
+.bill-address{
+  font-size:12px;
+  color:#888;
+  margin-top:8px;
+  padding-top:8px;
+  border-top:1px solid rgba(255,255,255,0.05);
+  line-height:1.5;
+}
+.bill-address span{
+  color:#aaa;
+}
+.bill-body{
+  padding:14px 16px;
+}
+.bill-table{
+  width:100%;
+  border-collapse:collapse;
+  margin-bottom:12px;
+}
+.bill-table th{
+  font-size:11px;
+  color:#666;
+  text-transform:uppercase;
+  letter-spacing:0.5px;
+  padding:6px 4px;
+  border-bottom:1px solid rgba(255,255,255,0.06);
+  text-align:left;
+}
+.bill-table th:last-child,.bill-table td:last-child{
+  text-align:right;
+}
+.bill-table th:nth-child(2),.bill-table td:nth-child(2){
+  text-align:center;
+}
+.bill-table td{
+  font-size:13px;
+  color:#ccc;
+  padding:8px 4px;
+  border-bottom:1px solid rgba(255,255,255,0.03);
+}
+.bill-table td:first-child{
+  color:#e0ddd8;
+  font-weight:500;
+}
+.bill-totals{
+  border-top:1px solid rgba(255,255,255,0.06);
+  padding-top:10px;
+}
+.bill-row{
+  display:flex;
+  justify-content:space-between;
+  font-size:12px;
+  color:#888;
+  padding:3px 0;
+}
+.bill-row.discount{
+  color:#4caf50;
+}
+.bill-grand{
+  display:flex;
+  justify-content:space-between;
+  font-size:15px;
+  font-weight:700;
+  color:#f0ede8;
+  padding:10px 0 4px;
+  border-top:1px dashed rgba(255,64,129,0.2);
+  margin-top:6px;
+}
+.bill-grand span:last-child{
+  color:#ff4081;
+}
 </style>
 </head>
 <body>
@@ -1059,61 +1171,134 @@ async function loadOrders(){
   var el = document.getElementById('ordersList');
   el.innerHTML = '<div class="loading"><span class="spinner"></span>Loading orders...</div>';
 
-  // orders table columns (no created_at): id, order_id, user_email, flower_name, price, total_amount, status, delivery_address
   var res = await _supabase
     .from("orders")
     .select("id,order_id,flower_name,price,total_amount,status,delivery_address")
     .eq("user_email", user.email);
 
   if(res.error){
-    el.innerHTML = '<div class="empty-state"><div>📦</div>Could not load orders.<br><small style="font-size:11px;color:#666;">' + res.error.message + '</small></div>';
+    el.innerHTML = '<div class="empty-state"><div>📦</div>Could not load orders.<br><small style="font-size:11px;color:#555;">' + res.error.message + '</small></div>';
     return;
   }
 
   var orders = res.data || [];
-
   if(!orders.length){
     el.innerHTML = '<div class="empty-state"><div>📦</div>No orders yet</div>';
     return;
   }
 
   el.innerHTML = '';
+
   for(var j=0; j<orders.length; j++){
     var order = orders[j];
     var displayId = order.order_id || order.id;
+    var grandTotal = parseFloat(order.total_amount || order.price || 0);
 
-    // Try to fetch order_items using order_id (text field)
+    // Fetch order_items with product details
     var iRes = await _supabase
       .from("order_items")
       .select("qty,price,products(name)")
       .eq("order_id", displayId);
 
     var items = iRes.data || [];
-    var itemLines = '';
+
+    // Build items table rows
+    var itemRowsHtml = '';
+    var itemSubtotal = 0;
 
     if(items.length > 0){
-      itemLines = items.map(function(i){
-        return '<div class="order-item-line">' +
-          (i.products ? i.products.name : 'Item') + ' x ' + i.qty +
-          ' - Rs.' + (i.qty * i.price).toFixed(2) +
-        '</div>';
-      }).join('');
+      for(var k=0; k<items.length; k++){
+        var it = items[k];
+        var itTotal = it.qty * it.price;
+        itemSubtotal += itTotal;
+        itemRowsHtml +=
+          '<tr>' +
+            '<td>' + (it.products ? it.products.name : 'Item') + '</td>' +
+            '<td>' + it.qty + '</td>' +
+            '<td>Rs.' + it.price.toFixed(2) + '</td>' +
+            '<td>Rs.' + itTotal.toFixed(2) + '</td>' +
+          '</tr>';
+      }
     } else if(order.flower_name){
-      // Fallback: show flower_name stored directly on order
-      itemLines = order.flower_name.split(', ').map(function(name){
-        return '<div class="order-item-line">' + name + '</div>';
-      }).join('');
+      // Fallback from flower_name column
+      var names = order.flower_name.split(', ');
+      for(var n=0; n<names.length; n++){
+        itemRowsHtml += '<tr><td>' + names[n] + '</td><td>-</td><td>-</td><td>-</td></tr>';
+      }
+      itemSubtotal = grandTotal;
+    } else {
+      itemRowsHtml = '<tr><td colspan="4" style="color:#555;text-align:center;">No item details</td></tr>';
+      itemSubtotal = grandTotal;
     }
 
-    var amount = parseFloat(order.total_amount || order.price || 0).toFixed(2);
+    // Recalculate billing breakdown
+    var delivery = itemSubtotal > 0 ? 50 : 0;
+    var gst = itemSubtotal * 0.05;
+    var discount = Math.max(0, (itemSubtotal + delivery + gst) - grandTotal);
+
+    // Delivery address display
+    var addrHtml = '';
+    if(order.delivery_address && order.delivery_address.trim() && order.delivery_address !== '— Select delivery address —'){
+      addrHtml =
+        '<div class="bill-address">' +
+          '<div style="font-size:10px;color:#666;letter-spacing:1px;text-transform:uppercase;margin-bottom:3px;">Deliver To</div>' +
+          '<span>' + order.delivery_address + '</span>' +
+        '</div>';
+    }
+
+    // Status color
+    var statusColor = '#ff4081';
+    if(order.status === 'Delivered') statusColor = '#4caf50';
+    else if(order.status === 'Cancelled') statusColor = '#f44336';
 
     el.innerHTML +=
-      '<div class="order-card">' +
-        '<div class="order-id">Order: ' + displayId + '</div>' +
-        '<span class="status-badge">' + (order.status || 'Placed') + '</span>' +
-        '<div class="order-total">Rs.' + amount + '</div>' +
-        (itemLines || '<div class="order-item-line" style="color:#555;">No item details</div>') +
-        (order.delivery_address ? '<div style="font-size:11px;color:#555;margin-top:6px;">Deliver to: ' + order.delivery_address + '</div>' : '') +
+      '<div class="bill-card">' +
+
+        // Header
+        '<div class="bill-header">' +
+          '<div class="bill-header-top">' +
+            '<div>' +
+              '<div class="bill-shop">🌸 PetalRush</div>' +
+              '<div class="bill-sub">Fresh Flowers · Fast Delivery</div>' +
+            '</div>' +
+            '<div class="bill-order-no">' +
+              '<div style="color:#666;font-size:10px;">ORDER ID</div>' +
+              '<b>' + displayId + '</b>' +
+            '</div>' +
+          '</div>' +
+          '<div style="display:flex;justify-content:space-between;align-items:center;margin-top:6px;">' +
+            '<span class="status-badge" style="background:' + statusColor + '22;color:' + statusColor + ';border-color:' + statusColor + '44;">' + (order.status || 'Placed') + '</span>' +
+          '</div>' +
+          addrHtml +
+        '</div>' +
+
+        // Items table
+        '<div class="bill-body">' +
+          '<table class="bill-table">' +
+            '<thead>' +
+              '<tr>' +
+                '<th>Item</th>' +
+                '<th>Qty</th>' +
+                '<th>Rate</th>' +
+                '<th>Amount</th>' +
+              '</tr>' +
+            '</thead>' +
+            '<tbody>' + itemRowsHtml + '</tbody>' +
+          '</table>' +
+
+          // Totals
+          '<div class="bill-totals">' +
+            '<div class="bill-row"><span>Item Total</span><span>Rs.' + itemSubtotal.toFixed(2) + '</span></div>' +
+            '<div class="bill-row"><span>Delivery Fee</span><span>' + (delivery > 0 ? 'Rs.' + delivery.toFixed(2) : 'FREE') + '</span></div>' +
+            '<div class="bill-row"><span>GST (5%)</span><span>Rs.' + gst.toFixed(2) + '</span></div>' +
+            (discount > 0.5 ? '<div class="bill-row discount"><span>Discount Applied</span><span>- Rs.' + discount.toFixed(2) + '</span></div>' : '') +
+            '<div class="bill-grand">' +
+              '<span>Order Total</span>' +
+              '<span>Rs.' + grandTotal.toFixed(2) + '</span>' +
+            '</div>' +
+          '</div>' +
+        '</div>' +
+
       '</div>';
   }
 }
