--- a/buyer.html
+++ b/buyer.html
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PetalRush Buyer</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
@@ -504,6 +506,71 @@ select option{background:#1a1d26;}
   border:1px solid rgba(255,64,129,0.2);
   margin-bottom:6px;
 }
+
+/* DOWNLOAD BUTTONS */
+.bill-download-row{
+  display:flex;
+  gap:8px;
+  margin-top:14px;
+  padding-top:12px;
+  border-top:1px dashed rgba(255,64,129,0.15);
+}
+.bill-dl-btn{
+  flex:1;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:6px;
+  background:linear-gradient(135deg,#ff4081,#e0205f);
+  border:none;
+  padding:10px;
+  border-radius:8px;
+  color:white;
+  font-family:'DM Sans',sans-serif;
+  font-size:12px;
+  font-weight:600;
+  cursor:pointer;
+  transition:opacity 0.2s;
+}
+.bill-dl-btn.secondary{
+  background:#1a1d26;
+  border:1px solid rgba(255,255,255,0.1);
+}
+.bill-dl-btn:hover{opacity:0.85;}
+
+/* PRINTABLE RECEIPT - hidden in UI, used for download only */
+.bill-printable{
+  display:none;
+  position:fixed;
+  left:-9999px;
+  top:0;
+  width:360px;
+  background:#fff;
+  color:#111;
+  font-family:'DM Sans',Arial,sans-serif;
+  padding:28px 24px;
+  box-sizing:border-box;
+}
+.bp-header{text-align:center;margin-bottom:16px;}
+.bp-logo{height:48px;max-width:160px;object-fit:contain;display:block;margin:0 auto 6px;}
+.bp-logo-text{font-size:20px;font-weight:700;color:#ff4081;}
+.bp-tagline{font-size:11px;color:#888;letter-spacing:1.5px;text-transform:uppercase;margin-top:2px;}
+.bp-title{font-size:13px;font-weight:700;letter-spacing:2px;text-transform:uppercase;color:#333;margin-top:8px;}
+.bp-divider{border:none;border-top:1px solid #eee;margin:12px 0;}
+.bp-meta{margin-bottom:8px;}
+.bp-meta-row{display:flex;justify-content:space-between;font-size:12px;padding:3px 0;border-bottom:1px solid #f5f5f5;}
+.bp-meta-row span{color:#888;}
+.bp-meta-row b{color:#111;text-align:right;max-width:60%;word-break:break-all;}
+.bp-table{width:100%;border-collapse:collapse;font-size:12px;margin-bottom:8px;}
+.bp-table th{background:#f8f8f8;padding:7px 6px;text-align:left;font-size:11px;text-transform:uppercase;letter-spacing:0.5px;color:#666;border-bottom:2px solid #eee;}
+.bp-table th:last-child,.bp-table td:last-child{text-align:right;}
+.bp-table th:nth-child(2),.bp-table td:nth-child(2){text-align:center;}
+.bp-table td{padding:7px 6px;border-bottom:1px solid #f5f5f5;color:#333;}
+.bp-totals{background:#fafafa;border-radius:6px;padding:10px 12px;margin-top:4px;}
+.bp-total-row{display:flex;justify-content:space-between;font-size:12px;padding:3px 0;color:#555;}
+.bp-total-grand{display:flex;justify-content:space-between;font-size:15px;font-weight:700;color:#111;padding-top:8px;margin-top:6px;border-top:2px solid #ff4081;}
+.bp-total-grand span:last-child{color:#ff4081;}
+.bp-footer{text-align:center;font-size:11px;color:#aaa;margin-top:16px;padding-top:12px;border-top:1px dashed #eee;}
 
 /* BILL STYLES */
 .bill-logo-row{
@@ -1270,7 +1337,8 @@ async function loadOrders(){
   var res = await _supabase
     .from("orders")
     .select("id,order_id,flower_name,price,total_amount,status,delivery_address")
-    .eq("user_email", user.email);
+    .eq("user_email", user.email)
+    .order("order_id", {ascending:false});
 
   if(res.error){
     el.innerHTML = '<div class="empty-state"><div>📦</div>Could not load orders.<br><small style="font-size:11px;color:#555;">' + res.error.message + '</small></div>';
@@ -1278,6 +1346,16 @@ async function loadOrders(){
   }
 
   var orders = res.data || [];
+
+  // Sort newest first: extract timestamp from order_id like "ORD1771674712168"
+  orders.sort(function(a, b){
+    var aId = a.order_id || a.id || '';
+    var bId = b.order_id || b.id || '';
+    var aTs = parseInt(aId.replace('ORD','')) || 0;
+    var bTs = parseInt(bId.replace('ORD','')) || 0;
+    return bTs - aTs; // descending = newest first
+  });
+
   if(!orders.length){
     el.innerHTML = '<div class="empty-state"><div>📦</div>No orders yet</div>';
     return;
@@ -1427,7 +1505,59 @@ async function loadOrders(){
             '<div class="bill-grand"><span>Order Total</span><span>Rs.' + grandTotal.toFixed(2) + '</span></div>' +
           '</div>' +
 
-          '<div class="bill-footer">Thank you for choosing PetalRush 🌸</div>' +
+          '<div class="bill-footer">Thank you for choosing PetalRush \uD83C\uDF38</div>' +
+          '<div class="bill-download-row">' +
+            '<button class="bill-dl-btn" onclick="downloadBill(\'bill-' + displayId + '\', \'pdf\', \'' + (invoiceId||displayId) + '\')">' +
+              '<svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>' +
+              ' Download PDF' +
+            '</button>' +
+            '<button class="bill-dl-btn secondary" onclick="downloadBill(\'bill-' + displayId + '\', \'png\', \'' + (invoiceId||displayId) + '\')">' +
+              '<svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21 15 16 10 5 21"/></svg>' +
+              ' Save PNG' +
+            '</button>' +
+          '</div>' +
+
+        '</div>' +
+
+        '<div id="bill-' + displayId + '" class="bill-printable">' +
+
+          '<div class="bp-header">' +
+            '<img src="Headerlogo.png" class="bp-logo" alt="PetalRush" onerror="this.style.display=\'none\';this.nextElementSibling.style.display=\'block\'">' +
+            '<span class="bp-logo-text" style="display:none">PetalRush</span>' +
+            '<div class="bp-tagline">Fresh Flowers · Fast Delivery</div>' +
+            '<div class="bp-title">ORDER RECEIPT</div>' +
+          '</div>' +
+
+          '<div class="bp-divider"></div>' +
+
+          '<div class="bp-meta">' +
+            '<div class="bp-meta-row"><span>Invoice No.</span><b>' + (invoiceId||displayId) + '</b></div>' +
+            '<div class="bp-meta-row"><span>Order ID</span><b>' + displayId + '</b></div>' +
+            (orderDate ? '<div class="bp-meta-row"><span>Date</span><b>' + orderDate + '</b></div>' : '') +
+            (orderTime ? '<div class="bp-meta-row"><span>Time</span><b>' + orderTime + '</b></div>' : '') +
+            '<div class="bp-meta-row"><span>Billed To</span><b>' + (user.email||'-') + '</b></div>' +
+            (addrVal && addrVal.indexOf('Select')===-1 ? '<div class="bp-meta-row"><span>Deliver To</span><b>' + addrVal + '</b></div>' : '') +
+            '<div class="bp-meta-row"><span>Status</span><b style="color:' + statusColor + '">' + (order.status||'Placed') + '</b></div>' +
+          '</div>' +
+
+          '<div class="bp-divider"></div>' +
+
+          '<table class="bp-table">' +
+            '<thead><tr><th>Item</th><th>Qty</th><th>Rate</th><th>Amount</th></tr></thead>' +
+            '<tbody>' + itemRowsHtml.replace(/Rs\./g,'Rs.') + '</tbody>' +
+          '</table>' +
+
+          '<div class="bp-divider"></div>' +
+
+          '<div class="bp-totals">' +
+            '<div class="bp-total-row"><span>Item Total</span><span>Rs.' + itemSubtotal.toFixed(2) + '</span></div>' +
+            '<div class="bp-total-row"><span>Delivery Fee</span><span>' + (delivery>0?'Rs.'+delivery.toFixed(2):'FREE') + '</span></div>' +
+            '<div class="bp-total-row"><span>GST (5%)</span><span>Rs.' + gst.toFixed(2) + '</span></div>' +
+            (discount>1 ? '<div class="bp-total-row" style="color:#27ae60"><span>Discount</span><span>- Rs.' + discount.toFixed(2) + '</span></div>' : '') +
+            '<div class="bp-total-grand"><span>Order Total</span><span>Rs.' + grandTotal.toFixed(2) + '</span></div>' +
+          '</div>' +
+
+          '<div class="bp-footer">Thank you for choosing PetalRush 🌸 | petalrush.com</div>' +
 
         '</div>' +
 
@@ -1435,6 +1565,54 @@ async function loadOrders(){
   }
 }
 
+
+// ─── DOWNLOAD BILL ────────────────────────────────────────────────
+async function downloadBill(billId, format, invoiceName){
+  var el = document.getElementById(billId);
+  if(!el){ showToast("Receipt not found"); return; }
+
+  // Make printable div visible temporarily for capture
+  el.style.display = 'block';
+  el.style.left = '-9999px';
+  el.style.position = 'fixed';
+  document.body.appendChild(el);
+
+  showToast("Preparing download...");
+
+  try {
+    var canvas = await html2canvas(el, {
+      scale: 2,
+      backgroundColor: '#ffffff',
+      useCORS: true,
+      allowTaint: true,
+      logging: false
+    });
+
+    if(format === 'pdf'){
+      var jsPDF = window.jspdf ? window.jspdf.jsPDF : (window.jsPDF || null);
+      if(!jsPDF){ showToast("PDF library not loaded"); el.style.display='none'; return; }
+
+      var imgData = canvas.toDataURL('image/png');
+      var pdf = new jsPDF({ orientation:'portrait', unit:'px', format:[canvas.width/2, canvas.height/2] });
+      pdf.addImage(imgData, 'PNG', 0, 0, canvas.width/2, canvas.height/2);
+      pdf.save((invoiceName||'receipt') + '.pdf');
+      showToast("PDF downloaded!");
+
+    } else {
+      // PNG download
+      var link = document.createElement('a');
+      link.download = (invoiceName||'receipt') + '.png';
+      link.href = canvas.toDataURL('image/png');
+      link.click();
+      showToast("PNG downloaded!");
+    }
+  } catch(err){
+    showToast("Download failed: " + err.message);
+    console.error(err);
+  }
+
+  el.style.display = 'none';
+}
 
 // ─── LOGOUT ───────────────────────────────────────────────────────
 function doLogout(){
