--- a/buyer.html
+++ b/buyer.html
@@ -1567,54 +1567,84 @@ async function loadOrders(){
 
 
 // ─── DOWNLOAD BILL ────────────────────────────────────────────────
-async function downloadBill(billId, format, invoiceName){
+function downloadBill(billId, format, invoiceName){
   var el = document.getElementById(billId);
   if(!el){ showToast("Receipt not found"); return; }
 
-  // Make printable div visible temporarily for capture
-  el.style.display = 'block';
-  el.style.left = '-9999px';
-  el.style.position = 'fixed';
-  document.body.appendChild(el);
-
   showToast("Preparing download...");
 
-  try {
-    var canvas = await html2canvas(el, {
+  // Temporarily show the printable div in-page (not off-screen)
+  // Must be visible and in viewport for html2canvas to work
+  var overlay = document.createElement('div');
+  overlay.style.cssText = 'position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:9998;display:flex;align-items:flex-start;justify-content:center;overflow-y:auto;';
+  document.body.appendChild(overlay);
+
+  var wrapper = document.createElement('div');
+  wrapper.style.cssText = 'margin:20px auto;';
+  overlay.appendChild(wrapper);
+
+  // Clone the printable into the overlay
+  el.style.display = 'block';
+  el.style.position = 'static';
+  el.style.left = '0';
+  var clone = el.cloneNode(true);
+  clone.style.cssText = 'display:block;position:static;left:0;width:360px;background:#fff;color:#111;font-family:Arial,sans-serif;padding:28px 24px;box-sizing:border-box;';
+  wrapper.appendChild(clone);
+  el.style.display = 'none';
+
+  setTimeout(function(){
+    html2canvas(clone, {
       scale: 2,
       backgroundColor: '#ffffff',
       useCORS: true,
       allowTaint: true,
-      logging: false
+      logging: false,
+      width: 360,
+      windowWidth: 360
+    }).then(function(canvas){
+      document.body.removeChild(overlay);
+
+      if(format === 'pdf'){
+        try {
+          var jsPDFLib = (window.jspdf && window.jspdf.jsPDF) ? window.jspdf.jsPDF : window.jsPDF;
+          if(!jsPDFLib){
+            // Fallback: download as PNG if jsPDF failed to load
+            showToast("Saving as PNG instead...");
+            var lnk = document.createElement('a');
+            lnk.download = (invoiceName||'receipt') + '.png';
+            lnk.href = canvas.toDataURL('image/png');
+            document.body.appendChild(lnk);
+            lnk.click();
+            document.body.removeChild(lnk);
+            return;
+          }
+          var imgData = canvas.toDataURL('image/png');
+          var pxW = canvas.width / 2;
+          var pxH = canvas.height / 2;
+          var pdf = new jsPDFLib({ orientation:'portrait', unit:'px', format:[pxW, pxH] });
+          pdf.addImage(imgData, 'PNG', 0, 0, pxW, pxH);
+          pdf.save((invoiceName||'receipt') + '.pdf');
+          showToast("PDF downloaded!");
+        } catch(err){
+          showToast("PDF error: " + err.message);
+        }
+      } else {
+        var lnk = document.createElement('a');
+        lnk.download = (invoiceName||'receipt') + '.png';
+        lnk.href = canvas.toDataURL('image/png');
+        document.body.appendChild(lnk);
+        lnk.click();
+        document.body.removeChild(lnk);
+        showToast("PNG downloaded!");
+      }
+    }).catch(function(err){
+      document.body.removeChild(overlay);
+      showToast("Capture failed: " + err.message);
     });
-
-    if(format === 'pdf'){
-      var jsPDF = window.jspdf ? window.jspdf.jsPDF : (window.jsPDF || null);
-      if(!jsPDF){ showToast("PDF library not loaded"); el.style.display='none'; return; }
-
-      var imgData = canvas.toDataURL('image/png');
-      var pdf = new jsPDF({ orientation:'portrait', unit:'px', format:[canvas.width/2, canvas.height/2] });
-      pdf.addImage(imgData, 'PNG', 0, 0, canvas.width/2, canvas.height/2);
-      pdf.save((invoiceName||'receipt') + '.pdf');
-      showToast("PDF downloaded!");
-
-    } else {
-      // PNG download
-      var link = document.createElement('a');
-      link.download = (invoiceName||'receipt') + '.png';
-      link.href = canvas.toDataURL('image/png');
-      link.click();
-      showToast("PNG downloaded!");
-    }
-  } catch(err){
-    showToast("Download failed: " + err.message);
-    console.error(err);
-  }
-
-  el.style.display = 'none';
+  }, 300);
 }
 
-// ─── LOGOUT ───────────────────────────────────────────────────────
+// ─── LOGOUT ───────────────────────────────────────────────────────// ─── LOGOUT ───────────────────────────────────────────────────────
 function doLogout(){
   localStorage.removeItem("user");
   location.href = "index.html";
